fix(text): alert text should not wrap

--- a/src/bricks/text/text.module.css
+++ b/src/bricks/text/text.module.css
@@ -6,6 +6,10 @@
   max-width: 100%;
 }
 
+.noWrap {
+  white-space: nowrap;
+}
+
 .lineThrough {
   text-decoration: line-through;
 }
